--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "phosphor-icons": "^1.4.2",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
