--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
@@ -28,7 +29,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-tippy": "^1.4.0",
     "redux": "^4.2.1",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
